# crewAI-chien-flow

./: .env.exemple  README.md  crewai_flow.html  fiche_chien.json  pyproject.toml
knowledge/: Chien-Phantom de l'Arcane.txt  races.txt
src/chien_carac/: knowledge_loader.py  main.py
src/chien_carac/crews/check_race_crew/: check_race_crew.py
src/chien_carac/crews/check_race_crew/config/: agents.yaml  tasks.yaml
src/chien_carac/crews/chien_crew/: chien_crew.py
src/chien_carac/crews/chien_crew/config/: tasks.yaml
src/chien_carac/crews/fix_crew/: fix_crew.py
src/chien_carac/crews/fix_crew/config/: tasks.yaml
src/chien_carac/crews/verifier_crew/: verifier_crew.py
src/chien_carac/crews/verifier_crew/config/: agents.yaml  tasks.yaml
